# ld50-calculator

./: .gitignore  README.md  pyproject.toml  requirements.txt
biocalculator/: __main__.py  util.py
src/: main.py
src/biocalculator/: util.py
