[tool.isort]
force_single_line = false
include_trailing_comma = true
known_first_party = []
multi_line_output = 3
profile = "google"
py_version = 312

[tool.ruff]
extend-exclude = []
fix = true
line-length = 79
target-version = "py312"

[tool.ruff.lint]
allowed-confusables = ["А", "Б", "В", "Г", "Д", "Е", "Ё", "Ж", "З", "И", "Й",
    "К", "Л", "М", "Н", "О", "П", "Р", "С", "Т", "У", "Ф", "Х", "Ц", "Ч", "Ш",
    "Щ", "Ъ", "Ы", "Ь", "Э", "Ю", "Я", "а", "б", "в", "г", "д", "е", "ё", "ж",
    "з", "и", "й", "к", "л", "м", "н", "о", "п", "р", "с", "т", "у", "ф", "х",
    "ц", "ч", "ш", "щ", "ъ", "ы", "ь", "э", "ю", "я"]
extend-select = [
    "A",
    "B",
    "C",
    "C4",
    "C90",
    "COM",
    "DJ",
    "E",
    "ERA",
    "F",
    "FA",
    "I",
    "INP",
    "ISC",
    "N",
    "PIE",
    "PTH",
    "SIM",
    "T20",
    "TID252",
    "Q",
    "RET",
    "RUF",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = false
force-sort-within-sections = true
known-first-party = []
order-by-type = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
requires-python = ">=3.12"
name = "LD50_Calculator"
dependencies = [
    "PySide6==6.9.0",
    "matplotlib==3.10.3",
]
authors = [
    { name = "Ilia Anisimov", email = "me@anisimovia.ru" },
]
readme = "README.md"
description = "A simple LD50 calculator for educational purposes."
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[tool.pyside6-project]
files = [
    "src/main.py",
]

